force-directed refactoring

--- a/co-occurrence.html
+++ b/co-occurrence.html
@@ -12,7 +12,7 @@
   <div id="content">
 
     <div id="header">
-      <h1>ISW Network Name Co-occurrence</h1>
+      <h1>ISW Name Co-occurrence</h1>
       <small>
         <p>This matrix diagram visualizes co-occurrences of names extracted from ISW publications. Each colored cell represents two people that appeared in the same article; darker cells indicate people that co-occurred more frequently.</p>
         <p>Use the drop-down menu to reorder the matrix and click individual cells to explore the data.</p>
