--- a/force-directed.html
+++ b/force-directed.html
@@ -12,23 +12,16 @@
   <div id="content">
 
     <div id="header">
-      <h1>ISW Network Force Diagram</h1>
+      <h1>ISW Force Diagram</h1>
       <small>
         <p>This chart represents the network connections between people nodes within the ISW dataset</p>
       </small>
     </div>
 
+    <div id="wrapper">
+      <svg id="chart"></svg>
+    </div>
 
-
-    <svg id="chart">
-      <defs>
-        <pattern id="patternimage" x="0" y="0" height="1" width="1">
-          <image x="0" y="0" height="80" width="80" transform="translate(-30,-30)"
-          xlink:href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Portrait_of_Nouri_al-Maliki.jpg/139px-Portrait_of_Nouri_al-Maliki.jpg"></image>
-        </pattern>
-      </defs>
-
-    </svg>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
