--- a/force-directed.html
+++ b/force-directed.html
@@ -14,7 +14,8 @@
     <div id="header">
       <h1>ISW Force Diagram</h1>
       <small>
-        <p>This chart represents the network connections between people nodes within the ISW dataset</p>
+        <p>This chart visualizees the network of connections between names extracted from ISW publications. Each node represents a person and links represent being mentioned in the same article.</p>
+        <p>Mouse over a node to higlight its connections. Click and drag to pin the node to a new position. Double click to un-pin.</p>
       </small>
     </div>
 
