--- a/force-directed.html
+++ b/force-directed.html
@@ -21,6 +21,7 @@
 
     <div id="wrapper">
       <svg id="chart"></svg>
+      <p><small>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a>.</small></p>
     </div>
 
   </div>
