World map added

--- a/co-occurrence.html
+++ b/co-occurrence.html
@@ -21,7 +21,7 @@
 
     <div id="wrapper">
       <div id="main">
-        <svg id="matrix"></svg>
+        <svg id="chart"></svg>
         <p><small>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a>.</small></p>
       </div>
       <div id="menu">
@@ -45,4 +45,5 @@
   <script src="js/co-occurrence.js"></script>
 
 </body>
+</html>
 
