--- a/timeline.html
+++ b/timeline.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ISW Name Co-occurrence</title>
-  <link rel="stylesheet" href="css/co-occurrence.css">
+  <title>ISW Timeline</title>
+  <link rel="stylesheet" href="css/timeline.css">
 </head>
 
 <body>
@@ -12,12 +12,13 @@
   <div id="content">
 
     <div id="header">
-      <h1>ISW Name Co-occurrence</h1>
+      <h1>ISW Timeline</h1>
       <small>
         <p>This matrix diagram visualizes co-occurrences of names extracted from ISW publications. Each colored cell represents two people that appeared in the same article; darker cells indicate people that co-occurred more frequently.</p>
         <p>Use the drop-down menu to reorder the matrix and click individual cells to explore the data.</p>
       </small>
     </div>
+
 
     <div id="wrapper">
       <div id="main">
@@ -28,8 +29,8 @@
         <p>
           Order by: 
           <select id="order">
+            <option value="count">Count</option>
             <option value="name">Name</option>
-            <option value="count">Frequency</option>
           </select>
         </p>
         <div id="display">
@@ -38,12 +39,13 @@
       </div>
     </div>
 
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="js/co-occurrence.js"></script>
+  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+  <script src="js/timeline.js"></script>
 
 </body>
 </html>
-
