Timeline x-axis added

--- a/timeline.html
+++ b/timeline.html
@@ -14,8 +14,8 @@
     <div id="header">
       <h1>ISW Timeline</h1>
       <small>
-        <p>This matrix diagram visualizes co-occurrences of names extracted from ISW publications. Each colored cell represents two people that appeared in the same article; darker cells indicate people that co-occurred more frequently.</p>
-        <p>Use the drop-down menu to reorder the matrix and click individual cells to explore the data.</p>
+        <p>This chart visualizes when and how often names were mentioned in ISW publications. Each cell represents the number of ISW publicaitons containing a person's name for a given calendar month; darker cells indicate a greater number of publications.</p>
+        <p>Use the drop-down menu to reorder the chart and click individual cells to explore the data.</p>
       </small>
     </div>
 
