--- a/timeline.html
+++ b/timeline.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>ISW Timeline</title>
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/timeline.css">
 </head>
 
@@ -13,17 +14,19 @@
 
     <div id="header">
       <h1>ISW Timeline</h1>
-      <small>
-        <p>This chart visualizes when and how often names were mentioned in ISW publications. Each cell represents the number of ISW publicaitons containing a person's name for a given calendar month; darker cells indicate a greater number of publications.</p>
-        <p>Use the drop-down menu to reorder the chart and click individual cells to explore the data.</p>
-      </small>
+      <p>This chart visualizes when and how often names were mentioned in ISW publications. Each cell represents the number of ISW publicaitons containing a person's name for a given calendar month; darker cells indicate a greater number of publications.</p>
+      <p>Use the drop-down menu to reorder the chart and click individual cells to explore the data.</p>
     </div>
 
     <div id="wrapper">
+
       <div id="main">
         <svg id="chart"></svg>
-        <p><small>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a>.</small></p>
+        <div id="footer">
+          <p>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
+        </div>
       </div>
+
       <div id="menu">
         <p>
           Order by: 
@@ -36,6 +39,7 @@
           <p>Click a matrix cell to view details.</p>
         </div>
       </div>
+
     </div>
 
   </div>
