--- a/world-map.html
+++ b/world-map.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>ISW World Map</title>
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/world-map.css">
 </head>
 
@@ -13,17 +14,15 @@
 
     <div id="header">
       <h1>ISW World Map</h1>
-      <small>
-        <p>World map of place names extracted from ISW products. Mouse over countries to display info. Click to view associated products. </p>
-      </small>
+      <p>World map of place names extracted from ISW products. Mouse over countries to display info. Click to view associated products. </p>
     </div>
 
     <div id="wrapper">
       <svg id="chart"></svg>
       <div id="results"></div>
-    </div>
-    <div id="footer">
-      <p>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a>.</p>
+      <div id="footer">
+        <p>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
+      </div>
     </div>
 
   </div>
