--- a/co-occurrence.html
+++ b/co-occurrence.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>ISW Name Co-occurrence</title>
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/co-occurrence.css">
 </head>
 
@@ -13,17 +14,19 @@
 
     <div id="header">
       <h1>ISW Name Co-occurrence</h1>
-      <small>
-        <p>This matrix diagram visualizes co-occurrences of names extracted from ISW publications. Each colored cell represents two people that appeared in the same article; darker cells indicate people that co-occurred more frequently.</p>
-        <p>Use the drop-down menu to reorder the matrix and click individual cells to explore the data.</p>
-      </small>
+      <p>This matrix diagram visualizes co-occurrences of names extracted from ISW publications. Each colored cell represents two people that appeared in the same article; darker cells indicate people that co-occurred more frequently.</p>
+      <p>Use the drop-down menu to reorder the matrix and click individual cells to explore the data.</p>
     </div>
 
     <div id="wrapper">
+
       <div id="main">
         <svg id="chart"></svg>
-        <p><small>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a>.</small></p>
+        <div id="footer">
+          <p>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
+        </div>
       </div>
+
       <div id="menu">
         <p>
           Order by: 
@@ -36,6 +39,7 @@
           <p>Click a matrix cell to view details.</p>
         </div>
       </div>
+
     </div>
 
   </div>
