--- a/world-map.html
+++ b/world-map.html
@@ -14,7 +14,8 @@
 
     <div id="header">
       <h1>ISW World Map</h1>
-      <p>World map of place names extracted from ISW products. Mouse over countries to display info. Click to view associated products. </p>
+      <p>This chart visualizes the frequency of country names extracted from ISW publications. Darker color represents a greater number of publications mentioning that country.</p>
+      <p>Mouse over countries to display info. Click to view associated publications.</p>
     </div>
 
     <div id="wrapper">
