--- a/word-bubble.html
+++ b/word-bubble.html
@@ -25,7 +25,12 @@
         <button id="wordButton">Search</button>
       </div>
 
-      <svg id="chart"></svg>
+      <svg id="chart" width="960px" height="450"></svg>
+      <div>
+        <div id="results-header"></div>
+        <div id="results-body"></div>
+      </div>
+
       <div id="footer">
         <p>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
       </div>
@@ -35,8 +40,7 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://d3js.org/queue.v1.min.js"></script>
-  <script src="https://unpkg.com/lunr/lunr.js"></script>
+  <script src="https://unpkg.com/lunr/lunr.js"></script>  
   <script src="js/word-bubble.js"></script>
 
 </body>
