--- a/word-bubble.html
+++ b/word-bubble.html
@@ -14,8 +14,8 @@
 
     <div id="header">
       <h1>ISW Word Bubble</h1>
-      <p>This chart visualizes the frequency of individual words extracted from ISW publications. Each word and its total count is displayed as a circular node, with its radius also represented by the count.</p>
-      <p>Click each node to explore its related publication data. Click and drag nodes to reorder them. Add new nodes using the text input.</p>
+      <p>This chart visualizes the frequency of individual words extracted from ISW publications. Words are represents as nodes whose size corresponts to the total number of times the word appeared in all of the publications.</p>
+      <p>Click nodes to view publication information; drag to move nodes. Add new nodes using the text input or by clicking the keywords listed with each publication.</p>
     </div>
 
     <div id="wrapper">
@@ -32,7 +32,7 @@
       </div>
 
       <div id="footer">
-        <p>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
+        <p>Data sourced from: <a target="_blank" href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
       </div>
     </div>
 
@@ -40,7 +40,8 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://unpkg.com/lunr/lunr.js"></script>  
+  <script src="https://unpkg.com/lunr/lunr.js"></script>
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
   <script src="js/word-bubble.js"></script>
 
 </body>
