Quote highlighting and spacing; Typos

--- a/co-occurrence.html
+++ b/co-occurrence.html
@@ -23,7 +23,7 @@
       <div id="main">
         <svg id="chart"></svg>
         <div id="footer">
-          <p>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
+          <p>Data sourced from: <a target="_blank" href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
         </div>
       </div>
 
