--- a/force-directed.html
+++ b/force-directed.html
@@ -14,14 +14,14 @@
 
     <div id="header">
       <h1>ISW Force Diagram</h1>
-      <p>This chart visualizes the network of connections between names extracted from ISW publications. Each node represents a name and link connections represent appearing in the same article.</p>
-      <p>Mouse over a node to higlight its connections. Click and drag to pin the node to a new position. Double click to un-pin.</p>
+      <p>This chart visualizes the network of connections between names extracted from ISW publications. Each node represents a name, and links represent appearing in the same article.</p>
+      <p>Mouse over a node to highlight its connections. Click and drag to pin the node to a new position. Double click to un-pin.</p>
     </div>
 
     <div id="wrapper">
       <svg id="chart"></svg>
       <div id="footer">
-        <p>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
+        <p>Data sourced from: <a target="_blank" href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
       </div>
     </div>
 
