--- a/timeline.html
+++ b/timeline.html
@@ -14,7 +14,7 @@
 
     <div id="header">
       <h1>ISW Timeline</h1>
-      <p>This chart visualizes when and how often names were mentioned in ISW publications. Each cell represents the number of ISW publicaitons containing a person's name for a given calendar month; darker cells indicate a greater number of publications.</p>
+      <p>This chart visualizes when and how often names were mentioned in ISW publications. Each cell represents the number of ISW publications containing a person's name for a given calendar month; darker cells indicate a greater number of publications.</p>
       <p>Use the drop-down menu to reorder the chart and click individual cells to explore the data.</p>
     </div>
 
@@ -23,7 +23,7 @@
       <div id="main">
         <svg id="chart"></svg>
         <div id="footer">
-          <p>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
+          <p>Data sourced from: <a target="_blank" href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
         </div>
       </div>
 
