--- a/word-bubble.html
+++ b/word-bubble.html
@@ -14,8 +14,8 @@
 
     <div id="header">
       <h1>ISW Word Bubble</h1>
-      <p>This chart visualizes the frequency of individual words extracted from ISW publications. Words are represents as nodes whose size corresponts to the total number of times the word appeared in all of the publications.</p>
-      <p>Click nodes to view publication information; drag to move nodes. Add new nodes using the text input or by clicking the keywords listed with each publication.</p>
+      <p>This chart visualizes the frequency of individual words extracted from ISW publications. Words are represented as nodes whose size corresponds to the total number of times the word appeared in all of the publications.</p>
+      <p>Click nodes to view associated publications; drag to move nodes. Add new nodes using the text input or by clicking the keywords listed with each publication.</p>
     </div>
 
     <div id="wrapper">
