--- a/world-map.html
+++ b/world-map.html
@@ -22,7 +22,7 @@
       <svg id="chart"></svg>
       <div id="results"></div>
       <div id="footer">
-        <p>Data sourced from: <a href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
+        <p>Data sourced from: <a target="_blank" href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
       </div>
     </div>
 
