Masonry layout updates

--- a/world-map.html
+++ b/world-map.html
@@ -20,7 +20,13 @@
 
     <div id="wrapper">
       <svg id="chart"></svg>
-      <div id="results"></div>
+
+      <div>
+        <div id="results-header"></div>
+        <div id="results-body"></div>
+      </div>
+
+
       <div id="footer">
         <p>Data sourced from: <a target="_blank" href="https://www.kaggle.com/connerbrew2/isw-web-scrape-and-nlp-enrichment">ISW Web Scrape and Enrichment</a></p>
       </div>
@@ -34,6 +40,7 @@
   <script src="https://d3js.org/topojson.v2.min.js"></script>
   <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
   <script src="js/world-map.js"></script>
 
 </body>
